# firmware-attestation-mcp

./: .gitignore  README.md  SECURITY.md  __init__.py  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.well-known/: agent-card.json  agent.json  mcp-server-card.json
tests/: test_server.py
