[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firmware-attestation-mcp"
version = "1.0.1"
description = "Firmware Attestation MCP — hardware trust layer for sovereign AI. Scan firmware, check NSA-ANT-class persistence indicators (BIOS/SMM/HPA/boot-ROM), HMAC-signed firmware attestation, gate AI inference on verified hardware trust."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "MEOK AI Labs / CSOAI", email = "nicholas@csoai.org" }]
keywords = ["mcp", "firmware", "attestation", "sovereign-ai", "security", "tpm", "secure-boot"]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
firmware-attestation-mcp = "server:main"

[project.urls]
Homepage = "https://csoai.org"
Verify = "https://proofof.ai/api/verify"

[tool.hatch.build.targets.wheel]
include = ["server.py", "__init__.py"]
